2002-07-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS src/plot3d.c docs/gnuplot.doc: Support plotting surfaces with
	color lines or points with color according to explicitly given 4th
	column, e.g. "splot ... using 1:2:3:4 with [line|point] palette".

	* src/plot3d.c: The color for the color value of lines, colors, pm3d
	vertices is taken from the 3rd data column unless the 4th column is 
	explicitly stated by "using"; thus, the same splot is obtained
	regardless whether the input data file has 3 or 4 columns.

	* src/axis.h: Added condition "|| PM3D_IMPLICIT == pm3d.implicit" into
	macro NEED_PALETTE(plot).

	* src/datafile.h src/datafile.c: Routine df_3dmatrix(): don't use
	macro NEED_PALETTE(plot), but take parameter input_palette() --- this
	avoids #include "pm3d.h" in datafile.c.

2002-06-16  James R. Van Zandt  <jrv@debian.org>

	* term/cgm.trm: silently drop any labels outside the CGM plot
	window.  (This should eliminate the errors like "gnuplot:
	../term/cgm.trm:1150: CGM_write_int: Assertion `value <= 32767'
	failed.  Aborted (core dumped)".	

2002-06-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/fig.trm: Support for 'set palette maxcolors <n>'. Treat properly
	the case of color palette and monochrome fig file.

2002-06-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/pdf.trm term/svg.trm: Support for 'set palette maxcolors <n>'.

	* term/win.trm: Better document the meaning of 256 levels in
	WIN_make_palette(). Remove the previous change on limiting the gray
	into [0;255] as this is actually done in wgraph.c.

2002-06-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/pdf.trm term/svg.trm: Don't use GetColorValueFromFormula()
	mapping for red color when drawing gray output.

2002-06-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/README src/color.c: Removed the change of set_color(gray) made
	two days ago. Thus it still calls term->set_color(g) with g=[0:1].
	All drivers are now responsible that they don't overflow for a value